adjusted the layout of gangsheet form

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -10,3 +10,13 @@ h1.page-title
 
 .jobPositionContainer
 	margin: 40px 0
+
+.show
+	display: block
+
+.gangSheetForm .form-group
+	margin-bottom: 5px
+
+.v-select .selected-tag
+	background: none!important
+	border: none!important
