added materialize switch on form

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -23,3 +23,9 @@ h1.page-title
 
 .form-control
 	padding: 3px
+
+.switch label
+	margin-top: 7px
+
+.switch label .lever
+	margin-left: 0!important
