upgrade to bootstrap v4 and fixed layout

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -1,3 +1,6 @@
+.page-header-fixed .page-container
+	margin-top: 0 !important
+
 .text-bold
 	font-weight: bold
 
@@ -6,13 +9,13 @@
 	width: 120px
 
 h1.page-title
-	margin: 0!important
+	margin: 0 0 20px 0 !important
 
 .jobPositionContainer
 	margin: 40px 0
 
 .show
-	display: block
+	display: block !important
 
 .gangSheetForm .form-group
 	margin-bottom: 5px
@@ -29,3 +32,6 @@ h1.page-title
 
 .switch label .lever
 	margin-left: 0!important
+
+.pull-left
+	float: left !important
