adjusted gang sheet layout

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -30,8 +30,12 @@ h1.page-title
 .switch label
 	margin-top: 7px
 
-.switch label .lever
-	margin-left: 0!important
+.noMarginLeft
+	.lever
+		margin-left: 0!important
 
 .pull-left
 	float: left !important
+
+#findContainer
+	margin-top: 15px
