--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -42,3 +42,19 @@ h1.page-title
 
 .has-error .invalid-feedback
 	display: block
+
+.swal2-icon
+	border-radius: 50%!important
+
+.shake-horizontal
+	display: block!important
+
+#gangSheetEmployeesTable td
+	outline: none
+
+#employeePopover
+	width: 500px
+	max-width: none
+
+.handPointer
+	cursor: pointer
