done with upgrading of the theme’s latest version

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -1,3 +1,5 @@
+@import "theme/style.scss"
+
 .page-header-fixed .page-container
 	margin-top: 0 !important
 
@@ -25,7 +27,7 @@ h1.page-title
 	border: none!important
 
 .form-control
-	padding: 3px
+	padding: 7px
 
 .switch label
 	margin-top: 7px
