--- a/resources/assets/sass/theme/style.scss
+++ b/resources/assets/sass/theme/style.scss
@@ -20,8 +20,8 @@
 //== 4: Framework Components
 @import "framework/include";
 
-@import "../../../../node_modules/typeface-poppins/index.css";
-@import "../../../../node_modules/typeface-roboto/index.css";
+@import "../../../node_modules/typeface-poppins/index.css";
+@import "../../../node_modules/typeface-roboto/index.css";
 
 //== 5: Snippets
 // @import "../../snippets/include";
