--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -1,5 +1,65 @@
 @import "theme/style.scss"
 
+// fix for bootstrap checkbox
+.custom-control-input.is-valid ~ .custom-control-indicator, .was-validated .custom-control-input:valid ~ .custom-control-indicator
+  background-color: rgba(40, 167, 69, 0.25)
+
+.custom-control-input.is-invalid ~ .custom-control-indicator, .was-validated .custom-control-input:invalid ~ .custom-control-indicator
+  background-color: rgba(220, 53, 69, 0.25)
+
+.custom-control-input
+  &:checked ~ .custom-control-indicator
+    color: #fff
+    background-color: #007bff
+  &:focus ~ .custom-control-indicator
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25)
+  &:active ~ .custom-control-indicator
+    color: #fff
+    background-color: #b3d7ff
+  &:disabled ~
+    .custom-control-indicator
+      background-color: #e9ecef
+    .custom-control-description
+      color: #868e96
+
+.custom-control-indicator
+  position: absolute
+  top: 4px
+  top: .25rem
+  left: 0
+  display: block
+  width: 16px
+  width: 1rem
+  height: 16px
+  height: 1rem
+  pointer-events: none
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+  background-color: #ddd
+  background-repeat: no-repeat
+  background-position: 50%
+  background-size: 50% 50%
+
+.custom-checkbox
+  .custom-control-indicator
+    border-radius: 0.25rem
+  .custom-control-input
+    &:checked ~ .custom-control-indicator
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E")
+    &:indeterminate ~ .custom-control-indicator
+      background-color: #007bff
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E")
+
+.custom-radio
+  .custom-control-indicator
+    border-radius: 50%
+  .custom-control-input:checked ~ .custom-control-indicator
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E")
+
+
+//page style
 .page-header-fixed .page-container
 	margin-top: 0 !important
 
@@ -64,63 +124,5 @@ h1.page-title
 .replacementEmployeeRow
 	background-color: rgba(0, 0, 0, .05)
 
-
-
-
-// fix for bootstrap checkbox
-.custom-control-input.is-valid ~ .custom-control-indicator, .was-validated .custom-control-input:valid ~ .custom-control-indicator
-  background-color: rgba(40, 167, 69, 0.25)
-
-.custom-control-input.is-invalid ~ .custom-control-indicator, .was-validated .custom-control-input:invalid ~ .custom-control-indicator
-  background-color: rgba(220, 53, 69, 0.25)
-
-.custom-control-input
-  &:checked ~ .custom-control-indicator
-    color: #fff
-    background-color: #007bff
-  &:focus ~ .custom-control-indicator
-    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25)
-  &:active ~ .custom-control-indicator
-    color: #fff
-    background-color: #b3d7ff
-  &:disabled ~
-    .custom-control-indicator
-      background-color: #e9ecef
-    .custom-control-description
-      color: #868e96
-
-.custom-control-indicator
-  position: absolute
-  top: 4px
-  top: .25rem
-  left: 0
+#gangSheetEmployeesTable tbody td span
   display: block
-  width: 16px
-  width: 1rem
-  height: 16px
-  height: 1rem
-  pointer-events: none
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-  background-color: #ddd
-  background-repeat: no-repeat
-  background-position: 50%
-  background-size: 50% 50%
-
-.custom-checkbox
-  .custom-control-indicator
-    border-radius: 0.25rem
-  .custom-control-input
-    &:checked ~ .custom-control-indicator
-      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E")
-    &:indeterminate ~ .custom-control-indicator
-      background-color: #007bff
-      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E")
-
-.custom-radio
-  .custom-control-indicator
-    border-radius: 50%
-  .custom-control-input:checked ~ .custom-control-indicator
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E")
