fixed job position select’s height being cut

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -126,3 +126,6 @@ h1.page-title
 
 #gangSheetEmployeesTable tbody td span
   display: block
+
+#gangSheetEmployeesTableContainer
+  min-height: 270px
